# morpheus-ai

./: .ai-watchdog.yaml  .gitignore  .morpheus-ai.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_watchdog/: __init__.py  __main__.py  cli.py  config.py  engine.py  reporter.py  stats.py  violation.py
src/ai_watchdog/packs/: light.yaml  standard.yaml  strict.yaml
src/morpheus_ai/: __init__.py  __main__.py  audit.py  cli.py  config.py  engine.py  reporter.py  rules.py  stats.py  violation.py
src/morpheus_ai/packs/: light.yaml  standard.yaml  strict.yaml
tests/: test_audit.py  test_cli.py  test_config.py  test_engine.py  test_hooks.py  test_new_rules.py  test_pack_examples.py  test_reporter.py  test_rules.py  test_stats.py
